force-app/main/default/objects/Case/fields/A_File__c.field-meta.xml
<CustomField>
    <fullName>A_File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>A File</label>
    <referenceTo>A_File__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>