force-app/main/default/objects/Case/fields/A_Number__c.field-meta.xml
<CustomField>
    <fullName>A_Number__c</fullName>
    <description>A File Number</description>
    <label>A Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>