force-app/main/default/objects/Case/fields/Case_assigned_to_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Case_assigned_to_Contractor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case assigned to Contractor</label>
    <type>Checkbox</type>
</CustomField>