force-app/main/default/objects/Case/fields/Case_in_File_Retrieval__c.field-meta.xml
<CustomField>
    <fullName>Case_in_File_Retrieval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case in File Retrieval</label>
    <type>Checkbox</type>
</CustomField>