force-app/main/default/objects/Case/fields/Date_Case_Assigned_to_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Date_Case_Assigned_to_Contractor__c</fullName>
    <label>Date Case Assigned to Contractor</label>
    <type>DateTime</type>
</CustomField>