force-app/main/default/objects/Case/fields/Date_Case_in_File_Retrieval__c.field-meta.xml
<CustomField>
    <fullName>Date_Case_in_File_Retrieval__c</fullName>
    <label>Date Case in File Retrieval</label>
    <type>DateTime</type>
</CustomField>