force-app/main/default/objects/Case/fields/Date_File_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Date_File_Delivered__c</fullName>
    <label>Date File Delivered</label>
    <type>DateTime</type>
</CustomField>