force-app/main/default/objects/Case/fields/Date_File_Processed__c.field-meta.xml
<CustomField>
    <fullName>Date_File_Processed__c</fullName>
    <label>Date File Processed</label>
    <type>DateTime</type>
</CustomField>