force-app/main/default/objects/Case/fields/Date_File_Pulled_for_Processing__c.field-meta.xml
<CustomField>
    <fullName>Date_File_Pulled_for_Processing__c</fullName>
    <label>Date File Pulled for Processing</label>
    <type>DateTime</type>
</CustomField>