force-app/main/default/objects/Case/fields/Date_File_Pulled_from_Shelf__c.field-meta.xml
<CustomField>
    <fullName>Date_File_Pulled_from_Shelf__c</fullName>
    <label>Date File Pulled from Shelf</label>
    <type>DateTime</type>
</CustomField>