force-app/main/default/objects/Case/fields/eWRTS_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>eWRTS_Case_Number__c</fullName>
    <description>Foreign Key (kinda) to help with data transfer between Orgs</description>
    <label>eWRTS Case Number</label>
    <length>55</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>