force-app/main/default/objects/Case/fields/eWRTS_Randomly_Generated_Case__c.field-meta.xml
<CustomField>
    <fullName>eWRTS_Randomly_Generated_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>eWRTS Randomly Generated Case</label>
    <type>Checkbox</type>
</CustomField>