force-app/main/default/objects/Case/fields/File_Delivered__c.field-meta.xml
<CustomField>
    <fullName>File_Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>File Delivered</label>
    <type>Checkbox</type>
</CustomField>