force-app/main/default/objects/Case/fields/File_Processed__c.field-meta.xml
<CustomField>
    <fullName>File_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>File Processed</label>
    <type>Checkbox</type>
</CustomField>