force-app/main/default/objects/Case/fields/File_Pulled_for_Processing__c.field-meta.xml
<CustomField>
    <fullName>File_Pulled_for_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>File Pulled for Processing</label>
    <type>Checkbox</type>
</CustomField>