force-app/main/default/objects/Case/fields/File_Pulled_from_Shelf__c.field-meta.xml
<CustomField>
    <fullName>File_Pulled_from_Shelf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>File Pulled from Shelf</label>
    <type>Checkbox</type>
</CustomField>