force-app/main/default/objects/Case/fields/Location_SIte__c.field-meta.xml
<CustomField>
    <fullName>Location_Site__c</fullName>
    <label>Location Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NRC</fullName>
            </value>
            <value>
                <fullName>ES1</fullName>
            </value>
            <value>
                <fullName>ES2</fullName>
            </value>
            <value>
                <fullName>ES3</fullName>
            </value>
            <value>
                <fullName>ES4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>