force-app/main/default/objects/Case/fields/Other_Documents_Requested__c.field-meta.xml
<CustomField>
    <fullName>Other_Documents_Requested__c</fullName>
    <label>Other Documents Requested</label>
    <length>255</length>
    <type>Text</type>
</CustomField>