force-app/main/default/objects/Case/fields/REQ_Alien_Status__c.field-meta.xml
<CustomField>
    <fullName>REQ_Alien_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alien Status</label>
    <type>Checkbox</type>
</CustomField>