force-app/main/default/objects/Case/fields/REQ_All_Applications_and_Petitions__c.field-meta.xml
<CustomField>
    <fullName>REQ_All_Applications_and_Petitions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Applications and Petitions</label>
    <type>Checkbox</type>
</CustomField>