force-app/main/default/objects/Case/fields/REQ_All_J_C_Forms__c.field-meta.xml
<CustomField>
    <fullName>REQ_All_J_C_Forms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All J&amp;C Forms</label>
    <type>Checkbox</type>
</CustomField>