force-app/main/default/objects/Case/fields/REQ_All_Removal_Documents__c.field-meta.xml
<CustomField>
    <fullName>REQ_All_Removal_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Removal Documents</label>
    <type>Checkbox</type>
</CustomField>