force-app/main/default/objects/Case/fields/REQ_Biometric_Data__c.field-meta.xml
<CustomField>
    <fullName>REQ_Biometric_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Biometric Data</label>
    <type>Checkbox</type>
</CustomField>