force-app/main/default/objects/Case/fields/REQ_Entire_File__c.field-meta.xml
<CustomField>
    <fullName>REQ_Entire_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entire File</label>
    <type>Checkbox</type>
</CustomField>