force-app/main/default/objects/Case/fields/REQ_Fingerprints__c.field-meta.xml
<CustomField>
    <fullName>REQ_Fingerprints__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fingerprints</label>
    <type>Checkbox</type>
</CustomField>