force-app/main/default/objects/Case/fields/REQ_I_485_Form__c.field-meta.xml
<CustomField>
    <fullName>REQ_I_485_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I-485 Form</label>
    <type>Checkbox</type>
</CustomField>