force-app/main/default/objects/Case/fields/REQ_IJO_Form__c.field-meta.xml
<CustomField>
    <fullName>REQ_IJO_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IJO Form</label>
    <type>Checkbox</type>
</CustomField>