force-app/main/default/objects/Case/fields/REQ_N_400_600_Forms__c.field-meta.xml
<CustomField>
    <fullName>REQ_N_400_600_Forms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>N-400/600 Forms</label>
    <type>Checkbox</type>
</CustomField>