force-app/main/default/objects/Case/fields/REQ_Other_Documents__c.field-meta.xml
<CustomField>
    <fullName>REQ_Other_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Documents</label>
    <type>Checkbox</type>
</CustomField>