force-app/main/default/objects/Case/fields/REQ_Photos__c.field-meta.xml
<CustomField>
    <fullName>REQ_Photos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photos</label>
    <type>Checkbox</type>
</CustomField>