force-app/main/default/objects/Case/fields/Time_to_Case_Closed__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Case_Closed__c</fullName>
    <formula>(Date_File_Processed__c - Date_Opened__c) *24 *60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to Case Closed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>