force-app/main/default/objects/Case/fields/Time_to_File_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Time_to_File_Delivered__c</fullName>
    <formula>Date_File_Delivered__c - Date_File_Pulled_from_Shelf__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to File Delivered</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>