force-app/main/default/objects/Case/fields/Time_to_File_Processed__c.field-meta.xml
<CustomField>
    <fullName>Time_to_File_Processed__c</fullName>
    <formula>Date_File_Processed__c - Date_File_Pulled_for_Processing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to File Processed</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>