force-app/main/default/objects/Case/fields/Time_to_File_Pulled_for_Processing__c.field-meta.xml
<CustomField>
    <fullName>Time_to_File_Pulled_for_Processing__c</fullName>
    <formula>(Date_File_Pulled_for_Processing__c - Date_File_Delivered__c) *24 *60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to File Pulled for Processing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>