force-app/main/default/objects/Case/fields/Time_to_File_Pulled_from_Shelf__c.field-meta.xml
<CustomField>
    <fullName>Time_to_File_Pulled_from_Shelf__c</fullName>
    <formula>(Date_File_Pulled_from_Shelf__c - Date_Case_Assigned_to_Contractor__c) *24 *60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to File Pulled from Shelf</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>