force-app/main/default/objects/Case/fields/User_Contact_Info_Validated__c.field-meta.xml
<CustomField>
    <fullName>User_Contact_Info_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Contact Info Validated</label>
    <type>Checkbox</type>
</CustomField>