force-app/main/default/objects/Case/recordTypes/eWRTS_Case.recordType-meta.xml
<RecordType>
    <fullName>eWRTS_Case</fullName>
    <active>true</active>
    <businessProcess>eWRTS Support Process</businessProcess>
    <description>eWRTS Case</description>
    <label>eWRTS Case</label>
</RecordType>