force-app/main/default/objects/Case/listViews/All_eWRTS_Cases.listView-meta.xml
<ListView>
    <fullName>All_eWRTS_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Date_Opened__c</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.eWRTS_Case</value>
    </filters>
    <label>All eWRTS Cases</label>
</ListView>