force-app/main/default/objects/Case/listViews/eWRTS_File_Processing_Queue_Case.listView-meta.xml
<ListView>
    <fullName>eWRTS_File_Processing_Queue_Case</fullName>
    <columns>Date_Opened__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>A_Number__c</columns>
    <columns>NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.PRIORITY</columns>
    <filterScope>Queue</filterScope>
    <label>IMLS File Processing Queue</label>
    <queue>eWRTS_File_Processing_Queue</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>