force-app/main/default/objects/Case/listViews/eWRTS_File_Retrieval_By_Location.listView-meta.xml
<ListView>
    <fullName>eWRTS_File_Retrieval_By_Location</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.eWRTS_Case</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>File_Retrieval</value>
    </filters>
    <label>eWRTS File Retrieval By Location</label>
</ListView>