force-app/main/default/objects/Case/listViews/eWRTS_NRC_Contractor_Queue_Case.listView-meta.xml
<ListView>
    <fullName>eWRTS_NRC_Contractor_Queue_Case</fullName>
    <columns>Date_Opened__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>A_Number__c</columns>
    <columns>CASES.PRIORITY</columns>
    <filterScope>Queue</filterScope>
    <label>IMLS NRC Contractor Queue</label>
    <queue>eWRTS_NRC_Contractor_Queue</queue>
</ListView>