force-app/main/default/objects/Case/listViews/eWRTS_NRC_Triage_Queue_Case.listView-meta.xml
<ListView>
    <fullName>eWRTS_NRC_Triage_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>eWRTS NRC Triage Queue</label>
    <queue>eWRTS_NRC_Triage_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>